[gd_scene load_steps=8 format=3 uid="uid://bq465ihcm2cpb"]

[ext_resource type="Script" path="res://systems/display_system.gd" id="1_0qay1"]
[ext_resource type="PackedScene" uid="uid://bfxq5upvhagwk" path="res://ui/hud/hud.tscn" id="1_oid68"]
[ext_resource type="Script" path="res://main/main.gd" id="1_ovjdh"]
[ext_resource type="PackedScene" uid="uid://j4mg4nhqkw0h" path="res://backgrounds/dots/dots.tscn" id="2_p7idv"]
[ext_resource type="PackedScene" uid="uid://dvvicg5pn14qv" path="res://systems/rtd_system.tscn" id="3_ig5m1"]
[ext_resource type="PackedScene" uid="uid://vgjwmgai2tyu" path="res://systems/round_system.tscn" id="4_s25v5"]
[ext_resource type="Script" path="res://common/camera.gd" id="5_h5sbx"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovjdh")

[node name="DisplaySystem" type="SubViewportContainer" parent="." groups=["display_system"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -120.0
offset_right = 180.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(180, 120)
script = ExtResource("1_0qay1")

[node name="SubViewport" type="SubViewport" parent="DisplaySystem"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
size = Vector2i(360, 240)
render_target_update_mode = 4

[node name="Dots" parent="DisplaySystem/SubViewport" instance=ExtResource("2_p7idv")]

[node name="RtdSystem" parent="DisplaySystem/SubViewport" instance=ExtResource("3_ig5m1")]

[node name="RoundSystem" parent="DisplaySystem/SubViewport" instance=ExtResource("4_s25v5")]

[node name="Camera" type="Camera2D" parent="DisplaySystem/SubViewport"]
ignore_rotation = false
process_callback = 0
limit_left = 0
limit_top = 0
limit_right = 720
limit_bottom = 480
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("5_h5sbx")
follow_player = true
shake_damage_intensity = 4.0
shake_damage_duration = 0.25
metadata/_edit_lock_ = true

[node name="HUD" parent="." instance=ExtResource("1_oid68")]
layout_mode = 1
